<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto">    <!--  SHOW AsAction if room buat ngasih icon nya tapi kalo never dia bikin triple dot-->    <item android:id="@+id/menu_search"        android:icon="@drawable/ic_search"        app:showAsAction="ifRoom"        android:title="@string/txt_search"        app:actionViewClass="androidx.appcompat.widget.SearchView"/>    <item android:id="@+id/menu_sort"        android:icon="@drawable/ic_sort"        android:title="@string/txt_sort"        app:showAsAction="ifRoom">        <menu>            <group android:checkableBehavior="single">                <item android:title="@string/txt_sort_by">                    <menu>                        <item                            android:id="@+id/menu_priority_high"                            android:title="@string/txt_priority_high"/>                        <item                            android:id="@+id/menu_priority_low"                            android:title="@string/txt_priority_low"/>                    </menu>                </item>            </group>        </menu>    </item>    <item        android:id="@+id/menu_delete_all"        android:title="@string/txt_delete_all"        app:showAsAction="never"/><!--    Kalo showAsActions Always Dia Maksa Buat Tetep Nampilin Si Icon Nya, --><!--    Butt Android Studio ini gak recommend buat lo make. --><!--    Android Studio Prefer Ke ShowAsAction If Room--><!--    Kalo ShowAsAction Never Dia Mengalah Buat Taro Di Dalam Triple Dot-->    <!--    Kalo ShowAsAction If Room Dia Buat Nampilin Icon Bedanya Sama Si Always --><!--    Adalah Dia Gak Maksa, Kalo Gak Bisa Ya Tetep Gak Bisa--></menu>